--- a/Week-2/submission/Session-04/Execrise-5-Advance/styles.css
+++ b/Week-2/submission/Session-04/Execrise-5-Advance/styles.css
@@ -4,34 +4,36 @@
   padding: 0;
 }
 body {
-  max-width: 100%;
+  width: 40%;
   margin: 0 auto;
   padding: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   background-color: #fef2f4;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+h1 {
+  color: #df2e38;
 }
 nav {
-  padding: 30px 0;
+  padding: 30px 0px;
 }
 ul {
   display: flex;
 }
 li {
   list-style: none;
-  padding: 0 10px;
+  padding-right: 20px;
 }
 a {
   text-decoration: none;
   color: #8f43ee;
   font-weight: 600;
+  transition: all 0.3s ease-in-out;
 }
 a:hover {
   color: brown;
 
-  padding-bottom: 10px;
+  padding-bottom: 5px;
 
   border-bottom: 2px solid black;
 }
@@ -94,24 +96,10 @@ fieldset {
   border-radius: 20px;
   border: 2px solid grey;
 }
-footer {
-  padding: 20px 0;
-  margin-right: 270px;
-}
-.footer {
-  margin-right: 90px;
-}
-.about-footer {
-  margin-right: 60px;
-}
-.main {
-  max-width: 50%;
-  margin-left: 30px;
-  padding: 0 40px;
-}
+
 iframe {
   width: 500px;
-  height: 800px;
+  height: 600px;
 }
 
 .underline {
